--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/superbowl.png" alt="">
     </header>
     <main>
-        <form action="mailto:danieltreep@live.nl?subject=My Prediction" method="post" enctype="text/plain">
+        <form action="mailto:danieltreep@live.nl?subject=My Prediction" method="post" enctype="multipart/form-data">
             <fieldset>
                 <legend>AFC</legend>
                 <h2>Wildcard Weekend</h2>
@@ -88,9 +88,9 @@
                 <h2>Divisional Round</h2>
                 <div class="match divisional-3">
                     
-                    <input type="radio" name="divisional-nfx-1" value="packers">
+                    <input type="radio" name="divisional-nfc-1" value="packers">
                     <img src="images/packers.png" alt="">
-                    <input type="radio" name="divisional-nfx-1" value="" data-index="5">
+                    <input type="radio" name="divisional-nfc-1" value="" data-index="5">
                     <img src="images/blank.png" alt="">
                 </div>
                 <div class="match divisional-4">
