--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/superbowl.png" alt="">
     </header>
     <main>
-        <form action="mailto:danieltreep@live.nl?subject=My Prediction" method="post" enctype="multipart/form-data">
+        <form action="mailto:danieltreep@live.nl?subject=My Prediction" method="post" enctype="application/x-www-form-urlencoded">
             <fieldset>
                 <legend>AFC</legend>
                 <h2>Wildcard Weekend</h2>
