--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/superbowl.png" alt="">
     </header>
     <main>
-        <form action="mailto:https://danieltreep@live.nl?subject=My Prediction" method="post" enctype="application/x-www-form-urlencoded">
+        <form method="POST" enctype="application/x-www-form-urlencoded">
             <fieldset>
                 <legend>AFC</legend>
                 <h2>Wildcard Weekend</h2>
@@ -121,11 +121,11 @@
                     <img src="images/blank.png" alt="">
                 </div>
             </fieldset>
-            <fieldset class="submit">
+            <!-- <fieldset class="submit">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required class="text">
                 <input type="submit" value="send" class="button">
-            </fieldset>
+            </fieldset> -->
             
         </form>
     </main>
